Fix spacing for project headings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -208,6 +208,16 @@ footer {
     width: 100%;
 }
 
+.projects h2 {
+    font-size: 250%;
+    padding: 40px 0px;
+}
+
+.projects h3 {
+    font-size: 150%;
+    padding: 20px 0px 80px 0px;
+}
+
 .projects h2, .projects h3 {
     text-align: center;
 }
@@ -220,15 +230,3 @@ footer {
 .projects-iframe-wrapper {
     padding: 50x 0px;
 }
-
-
-/*
-EXAMPLE TO REFERE TO, DELETE BEFORE SUBMISSION
-#showreel-wrapper {
-    padding-top: 20px;
-}
-
-#showreel-hero {
-    width: 100%;
-    height: 750px;
-} */
